<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">XMFunSDKDemo</string>
    <string name="app_welcome">Welcome to Demo for FunSDK!\n©2025, Powered by JFTECH.</string>
    <string name="set_user">User</string>
    <string name="set_dev">Device</string>
    <string name="set_list">Device List</string>
    <string name="set_about">About Demo</string>
    <string name="set_user_register">Register</string>
    <string name="set_user_login">Login</string>
    <string name="set_user_modify_pwd">Modify Password</string>
    <string name="set_user_forget_pwd">Forget Password</string>
    <string name="set_user_info">User Information</string>
    <string name="set_user_info_change">edit</string>
    <string name="set_user_info_change_save">save</string>
    <string name="set_user_save_local_pwd">Save Local Password</string>
    <string name="user_name_repeat_btn">verify</string>
    <string name="user_logout">Logout</string>
    <string name="guide_message_username_fine">User name available</string>
    <string name="guide_message_request_phone_msg_success">Request to send verification code succeeded</string>
    <string name="user_login_error_emptypassword">The password is empty</string>
    <string name="user_login_error_emptyverifycode">Verification code is empty</string>
    <string name="guide_message_register_user_success">Registered user successfully</string>
    <string name="user_set_debug_info">Select whether to use the local password saving function here (valid at the next startup). If this function is used, the myapplication class will set the save path during initialization, and the password setting will be saved every time the device is successfully logged in. To obtain the local password, you can call FunSDK.DevGetLocalPwd () interface</string>
    <string name="test_qrcode_create">Create QR code</string>
    <string name="input_something">Input information</string>
    <string name="start_lan_alarm">Lan Alarm</string>
    <string name="device_lan_alarm_test">Alarm of LAN</string>
    <string name="device_opt_off">Close</string>
    <string name="device_opt_on">Open</string>
    <string name="user_info_id">ID</string>
    <string name="user_info_username">user name</string>
    <string name="user_info_email">e-mail</string>
    <string name="user_info_phone">mobile phone</string>
    <string name="user_info_sex">Sex</string>
    <string name="user_info_reg_time">Registration time</string>
    <string name="user_login_error_emptyusername">The user name is empty</string>
    <string name="user_login_error_username_not_pure_number">User name cannot be pure number</string>
    <string name="user_login_error_email">Email error</string>
    <string name="user_login_error_phone_number">Wrong mobile number</string>
    <string name="guide_message_error_call">Interface call returned error, please check</string>
    <string name="user_forget_pwd_verify_code_format_erroe">The captcha should be a four digit integer</string>
    <string name="user_forget_pwd_verify_code_first">Please submit the verification code first</string>
    <string name="user_forget_pwd_new_password_error">Please check the format of the new password</string>
    <string name="password_checker_weak_error"> The password you entered is too simple</string>
    <string name="user_forget_pwd_new_password_confirm_error">Please make sure that the password you entered is the same</string>
    <string name="user_forget_pwd_verify_success">Validation successful</string>
    <string name="user_forget_pwd_reset_passw_success">Password reset successful</string>
    <string name="user_forget_pwd_email"> please enter your mailbox</string>
    <string name="user_forget_pwd_phone"> please enter your mobile phone number</string>
    <string name="user_forget_pwd_verify_code"> please enter your verification code</string>
    <string name="user_forget_pwd_send_verify_code"> click to get</string>
    <string name="user_forget_pwd_verify_code_sent"> verification code has been sent</string>
    <string name="user_forget_pwd_new_passw"> please enter a new password</string>
    <string name="user_forget_pwd_new_passw_confirm"> please enter the confirm password</string>
    <string name="user_forget_pwd_submit"> submit</string>
    <string name="user_forget_pwd_verify"> submit verification code</string>
    <string name="password_checker_strong"> strong</string>
    <string name="password_checker_medium"> in </string>
    <string name="password_checker_weak"> weak </string>
    <string name="password_checker_empty"> empty</string>
    <string name="password_checker_short"> short</string>
    <string name="password_checker_long"> long</string>
    <string name="user_change_password"> confirm the change device password</string>
    <string name="user_change_password_hint_username"> account number more than 6 letters/numbers/symbols</string>
    <string name="user_change_password_hint_old_password"> old password</string>
    <string name="user_change_password_hint_new_password"> new password 6–16 digits/letters/symbols</string>
    <string name="user_change_password_hint_new_password_confirm"> please enter the password again</string>
    <string name="user_change_password_sucess"> modify the password successfully, please use the new password to log in again</string>
    <string name="user_change_password_error_emptyusername"> user name cannot be empty</string>
    <string name="user_change_password_error_emptypassw">password cannot be empty</string>
    <string name="user_change_password_error_passwtooshort"> new password is not up to standard</string>
    <string name="user_change_password_error_passwnotequal"> Please make sure that you enter the same password twice</string>
    <string name="user_login_hint_username"> account number/phone number</string>
    <string name="user_login_hint_password"> password</string>
    <string name="user_login_forgot_passwd"> Forgot your password?</string>
    <string name="user_login"> login </string>
    <string name="user_login_save_password"> save the password</string>
    <string name="user_login_auto_login"> automatic login </string>
    <string name="user_login_otherway"> can also choose the following way to log in </string>
    <string name="user_login_byweibo"> Sina Weibo login</string>
    <string name="user_login_byqq">QQ account login</string>
    <string name="user_login_noaccount"> no account?</string>
    <string name="user_login_register"> quick registration account </string>
    <string name="user_login_please_input_username_and_pwd">please input username and password</string>
    <string name="user_register_china"> China +86</string>
    <string name="user_register_get_verify_code"> click to get </string>
    <string name="user_register_account"> quick registration </string>
    <string name="user_register_by_email"> through the mailbox</string>
    <string name="user_register_by_cellphone"> through mobile phone</string>
    <string name="user_register_error_password_unmatched"> before and after the password does not match </string>
    <string name="user_register_error_username_length"> user name length does not match </string>
    <string name="user_register_error_password_length"> password length does not match </string>
    <string name="user_register_hint_username"> "account 6 or more letters/numbers/symbols"</string>
    <string name="user_register_hint_email">"Email is used when filling in/retrieving the password correctly"</string>
    <string name="user_register_hint_phone"> "Please enter the 11-digit phone number"</string>
    <string name="user_register_hint_verify_code"> "Enter the verification code"</string>
    <string name="user_register_hint_password"> "password 8–16 digits/letters/symbols"</string>
    <string name="user_register_hint_password_confirm"> please enter the password again</string>
    <string name="user_registering"> is registering…</string>
    <string name="user_register_success"> registered successfully, logging in…</string>
    <string name="user_register_login_success"> successfully logged in</string>
    <string name="user_register_login_fail"> login failure </string>
    <string name="user_not_login"> not logged in</string>
    <string name="user_info_not_login"> you have not logged in</string>
    <string name="user_info_sex_man"> male</string>
    <string name="user_info_sex_female"> female</string>
    <string name="guide_module_title_device_sn"> serial number to connect the device</string>
    <string name="guide_module_title_device_ap"> AP direct connection device</string>
    <string name="guide_module_title_device_lan"> LAN connection equipment </string>
    <string name="guide_module_title_device_add"> users add equipment </string>
    <string name="guide_module_title_device_connect2"> shared equipment</string>
    <string name="guide_module_title_device_browse"> view device files</string>
    <string name="guide_module_title_device_alarm"> device alarm </string>
    <string name="guide_module_title_device_setwifi"> WiFi quick configuration </string>
    <string name="device_opt_alarm_config"> alarm configuration </string>
    <string name="device_setup"> device configuration </string>
    <string name="device_preview"> device preview</string>
    <string name="device_setup_encode"> encoding configuration</string>
    <string name="EE_OK">OK</string>
    <string name="setup_btn_left">Left</string>
    <string name="setup_btn_right">Right</string>
    <string name="setup_btn_up">Up</string>
    <string name="setup_btn_down">Down</string>
    <string name="setup_btn_menu">Menu</string>
    <string name="setup_btn_esc">Esc</string>
    <string name="playback"> video playback</string>
    <string name="push_msg">Push Message</string>
    <string name="cloud_service">Cloud Service</string>
    <string name="push_set">Push Settings</string>
    <string name="voice_recording">Audio Recording</string>
    <string name="play_recording_voice">Play Audio</string>
    <string name="upload_voice">Upload Audio File</string>
    <string name="data_send">Send Data</string>
    <string name="send_data">Send Data</string>
    <string name="data_receive">Receive Data</string>
    <string name="open_serial_port">Open Serial Port</string>
    <string name="close_serial_port">Close Serial Port</string>
    <string name="modify_dev_name">Modify Device Name</string>
    <string name="device_share_manage">Device Share Management</string>
    <string name="get_config">Get Configuration</string>
    <string name="save_config">Save Configuration</string>
    <string name="cloud_playback">Cloud Playback</string>
    <string name="edit_local_user_password">Modify local device login name and password</string>
    <string name="start_ble_network">Start Bluetooth Pairing</string>
    <string name="stop_ble_network">Stop Bluetooth Pairing</string>
    <string name="search_ble_devs">Search Bluetooth Devices</string>
    <string name="start_config_monitor">Start configuration real-time monitoring</string>
    <string name="loading_local_voice">Load Local Test Audio File</string>
    <string name="text_to_audio">Text-To-Speech</string>
    <string name="camera_link_set">Camera Linkage</string>
    <string name="camera_link_switch">Enable Linkage</string>
    <string name="camera_link_aiming">Linkage Calibration</string>
    <string name="only_near_dev">Show only nearby devices</string>
    <string name="inter_device_linkage_link">Inter-Device Linkage</string>
    <string name="share_dev_data">Share Device Configuration</string>
    <string name="dev_ability">Device Ability</string>
    <string name="wake_up_master">Wake UP Main Controller</string>
    <string name="view_doc">View Documentation</string>
    <string name="get_dev_token_from_server">Obtain the latest device token from the server.</string>
    <string name="retrieve_dev_pwd">"Reset Device Password"</string>
</resources>