<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uilib="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutTop"
        layout="@layout/include_title_layout"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/EE_OK" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_ok"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@id/btn_ok"
        android:text="@string/setup_btn_left" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_ok"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/btn_ok"
        android:text="@string/setup_btn_right" />

    <Button
        android:id="@+id/btn_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_ok"
        android:layout_alignLeft="@id/btn_ok"
        android:layout_marginBottom="30dp"
        android:text="@string/setup_btn_up" />

    <Button
        android:id="@+id/btn_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_ok"
        android:layout_below="@id/btn_ok"
        android:layout_marginTop="30dp"
        android:text="@string/setup_btn_down" />

    <Button
        android:id="@+id/btn_esc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="110dp"
        android:text="@string/setup_btn_esc" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="110dp"
        android:text="@string/setup_btn_menu" />

</RelativeLayout>