<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uilib="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/layoutTop"
        layout="@layout/include_title_layout"/>

    <Button
        android:id="@+id/btn_start_ble_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_ble_network" />

    <CheckBox
        android:id="@+id/cb_only_near_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_near_dev" />

    <Button
        android:id="@+id/btn_stop_ble_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_ble_network"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_search_ble_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_ble_devs"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_test_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dev_bluetooth_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>