<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutTop"
        layout="@layout/include_title_layout"/>

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.xm.ui.widget.BtnColorBK
            style="@style/defaultButtonStyle"
            android:id="@+id/btn_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/open_serial_port"/>
        <com.xm.ui.widget.BtnColorBK
            style="@style/defaultButtonStyle"
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/close_serial_port"/>
        <com.xm.ui.widget.BtnColorBK
            style="@style/defaultButtonStyle"
            android:id="@+id/btn_send_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/send_data"/>
        <com.xm.ui.widget.ItemSetLayout
            android:id="@+id/isl_send_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="200dp"
            android:layout_weight="1"
            android:textStyle="normal"
            app:main_layout="@layout/view_send_data"
            android:layout_margin="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            app:left_title_text="@string/data_send"/>
        <com.xm.ui.widget.ItemSetLayout
            android:id="@+id/isl_receive_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="200dp"
            android:layout_weight="1"
            app:main_layout="@layout/view_receive_data"
            android:layout_margin="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            app:left_title_text="@string/data_receive"/>
    </LinearLayout>
</LinearLayout>
