<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uilib="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/ll_ctrl_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:gravity="center">
                <com.xm.ui.widget.BtnColorBK
                    android:id="@+id/btn_get_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_config"
                    uilib:no_press_solid="@color/line_color"
                    uilib:pressed_solid="@color/theme_color"/>

                <com.xm.ui.widget.BtnColorBK
                    android:id="@+id/btn_save_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_config"
                    uilib:no_press_solid="@color/line_color"
                    uilib:pressed_solid="@color/theme_color"
                    android:visibility="gone"/>

                <com.xm.ui.widget.BtnColorBK
                    android:id="@+id/btn_start_config_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_config_monitor"
                    uilib:no_press_solid="@color/line_color"
                    uilib:pressed_solid="@color/theme_color"
                    android:visibility="gone"/>

                <!--将获取到的设备信息分享出去-->
                <com.xm.ui.widget.BtnColorBK
                    android:id="@+id/btn_share_dev_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_dev_data"
                    uilib:no_press_solid="@color/line_color"
                    uilib:pressed_solid="@color/theme_color"/>

                <!--查看文档-->
                <com.xm.ui.widget.BtnColorBK
                    android:id="@+id/btn_view_doc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_doc"
                    uilib:no_press_solid="@color/line_color"
                    uilib:pressed_solid="@color/theme_color"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
